# burgasbus-scraper

./: CHANGELOG.md  CMakeLists.txt  MARKINSTRUCTIONS  README.md  vcpkg.json
burgasbus-scraper/: main.cpp  stops.h
